[tool.poetry]
package-mode = false

[tool.poetry.dependencies]
python = ">=3.12,<3.13"
fastapi = "^0.122.0"
alembic = "^1.17.2"
sqlalchemy = "^2.0.44"
environs = "^14.5.0"
uvicorn = "^0.38.0"
asyncpg = "^0.31.0"
pydantic = {extras = ["email"], version = "^2.12.5"}
pyjwt = "^2.10.1"
bcrypt = "^5.0.0"
redis = "^7.1.0"

[tool.poetry.group.dev.dependencies]
ruff = "^0.14.6"
black = "^25.11.0"

